# AnkiSiyuan

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: nuitka-build.yml  python-publish.yml
AnkiSiyuan/: __main__.py  cli.py  config.py  config_parser.py
AnkiSiyuan/notetypes/: SCloze.py  SListCloze.py  SMQA.py  SQA.py  STableCloze.py  SWatch.py
AnkiSiyuan/parser/: siyuan.py
src/ankisiyuan/: __main__.py  cli.py  config.py  config.toml  config_parser.py
src/ankisiyuan/notetypes/: SCloze.py  SListCloze.py  SMQA.py  SQA.py  STableCloze.py  SWatch.py
src/ankisiyuan/parser/: siyuan.py
src/ankisiyuan/parsers/: siyuan.py
