[tool.poetry]
name = "ankisiyuan"
version = "0.1.1"
description = "Sync Anki with Siyuan"
authors = ["clouder <clouder0@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
AnkiIn = "^0.1.7"
siyuanhelper = "^0.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
flake8-isort = "^5.0.3"
pep8-naming = "^0.13.2"
flake8-comprehensions = "^3.10.1"
flake8-bugbear = "^22.10.27"
flake8-quotes = "^3.3.1"
flake8-simplify = "^0.19.3"
flake8-use-fstring = "^1.4"
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
nuitka = "^1.2.4"
ordered-set = "^4.1.0"
zstandard = "^0.19.0"
poetryup = "^0.12.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
