[metadata]
name = AnkiSiyuan
version = 0.0.5
author = Clouder
author_email = clouder0@outlook.com
description = Sync SiYuan with Anki
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clouder0/AnkiSiyuan
project_urls =
    Bug Tracker = https://github.com/Clouder0/AnkiSiyuan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    AnkiIn
    siyuanhelper >= 0.0.3
    aiohttp
python_requires = >=3.6
